make re-usable routes and sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,22 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+.ant-menu-title-content {
+    color: white;
+}
+
+.ant-menu-item-selected .ant-menu-title-content {
+    color: black;
+}
+
+.ant-layout-sider-zero-width-trigger {
+    background-color: #8850B3 !important;
 }
