--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: "Poppins", sans-serif;
+}
+
 .ant-menu-title-content {
     color: white;
 }
@@ -20,4 +24,8 @@
 
 .ant-layout-sider-zero-width-trigger {
     background-color: #8850B3 !important;
+}
+
+.primary-main-btn {
+    @apply bg-[#8850B3] text-sm text-white py-2 px-4 rounded-xl font-semibold border border-[#8850B3] cursor-pointer
 }
