--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body {
 }
 
 .primary-main-btn {
-    @apply bg-primary-main text-sm text-white py-2 px-4 rounded-xl font-semibold border-0 cursor-pointer
+    @apply bg-primary-main text-sm text-white py-2 px-4 rounded-md font-semibold border-0 cursor-pointer
 }
 
 /* .custom-table .ant-table-thead>tr>th {
