--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,27 @@ body {
     font-family: "Poppins", sans-serif;
 }
 
+/* Apply scrollbar styles globally */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--light-blue-4) transparent;
+    scroll-behavior: smooth;
+}
+
+/* Apply specific styles to the webkit scrollbar */
+*::-webkit-scrollbar {
+    width: 10px;
+    scroll-behavior: smooth;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--light-gray);
+}
+
+*::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
 .ant-menu-title-content {
     color: white;
 }
