--- a/src/index.css
+++ b/src/index.css
@@ -67,13 +67,24 @@ body {
     @apply bg-primary-main text-sm text-white py-2 px-4 rounded-md font-semibold border-0 cursor-pointer
 }
 
-/* .custom-table .ant-table-thead>tr>th {
-    background-color: #8850B3;
+/* antd custom pagination design  */
+.antd_custom_pagination {
+    display: flex;
+    justify-content: center;
+}
 
-    color: white;
+.antd_custom_pagination li.ant-pagination-item:not(.ant-pagination-item-active) {
+    background: #d2def3 !important;
+}
 
-} */
+.antd_custom_pagination li.ant-pagination-item:not(.ant-pagination-item-active) a {
+    color: #000 !important;
+}
 
-/* .custom-table .ant-table-tbody>tr>td {
-    background-color: #c17df5;
-}  */
+.antd_custom_pagination .ant-pagination-item-active a {
+    color: #fff !important;
+}
+
+.antd_custom_pagination button.ant-pagination-item-link {
+    background: #DFDFDF !important;
+}
