--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
     --primary-main: #2A2F4F;
 }
 
-
 * {
     margin: 0;
     padding: 0;
@@ -15,6 +14,21 @@
 
 body {
     font-family: "Poppins", sans-serif;
+}
+
+@layer utilities {
+
+    /* Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+
+    .no-scrollbar {
+        -ms-overflow-style: none;
+        /* IE and Edge */
+        scrollbar-width: none;
+        /* Firefox */
+    }
 }
 
 /* Apply scrollbar styles globally */
